<resources>
    <string name="app_name">MobileAppDev_NT118.N11</string>
    <string name="name">FOOD DELIVERY</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_favourite">Món ăn yêu thích</string>
    <string name="menu_cart">Giỏ hàng</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="menu_profile">Thông tin cá nhân</string>
    <string name="menu_menu">Món ăn</string>
    <string name="menu_type">Phân loại</string>
    <string name="menu_unpaid">Đơn chờ</string>
    <string name="menu_paid">Đơn đã kiểm</string>
    <string name="menu_orders">Orders</string>
    <string name="search_hint">Bạn đói chưa? Cùng tìm món ngon nào</string>
    <string name="button_next">Tiếp theo</string>
    <string name="button_verify">Xác nhận</string>
    <string name="button_save">Lưu</string>

    <string name="new_password">Mật khẩu mới : </string>
    <string name="confim_password">Xác nhận mật khẩu : </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_management">ManagementActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_cart" />
    <string name="add_to_cart" />
</resources>