<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_menu" />

        <item
            android:id="@+id/nav_type"
            android:icon="@drawable/ic_baseline_sort_24"
            android:title="@string/menu_type" />

        <item
            android:id="@+id/nav_unpaid"
            android:icon="@drawable/ic_baseline_watch_later_24"
            android:title="@string/menu_unpaid" />

        <item
            android:id="@+id/nav_paid"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_paid" />

        <item
            android:id="@+id/nav_management_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>