<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu">


    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.mobileappdev_nt118n11.ui.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/nav_type"
        android:name="com.example.mobileappdev_nt118n11.ui.TypeFragment"
        android:label="@string/menu_type"
        tools:layout="@layout/fragment_type" />
    <fragment
        android:id="@+id/nav_unpaid"
        android:name="com.example.mobileappdev_nt118n11.ui.UnpaidFragment"
        android:label="@string/menu_unpaid"
        tools:layout="@layout/fragment_unpaid" />
    <fragment
        android:id="@+id/nav_paid"
        android:name="com.example.mobileappdev_nt118n11.ui.PaidFragment"
        android:label="@string/menu_paid"
        tools:layout="@layout/fragment_paid" />


</navigation>