<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mobileappdev_nt118n11.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.mobileappdev_nt118n11.ui.favourite.FavouriteFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.mobileappdev_nt118n11.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />
</navigation>